--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .container{
-    border: 1px solid red;
+    background-color: rgb(14, 13, 30);
     display: grid;
     padding: 2vw;
     gap: 1vw;
@@ -19,6 +19,18 @@
     grid-column: 1 / 4;
 }
 
+h2{
+    background-color: rgb(14, 13, 30);
+    font-size: 2vw;
+    text-align: center;
+    color: gray;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.801);
+    transition: all 0.2s linear;
+}
+
+h2:hover{
+    color: white;
+}
 
 .divs{
     overflow: hidden;
@@ -29,7 +41,6 @@
     scale: 1.3;
     overflow: hidden;
 }
-
 
 .image{
     width: 100%;
